5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1716_2503.log
== TEST (2019-05-16 00:26:15) 
-- CODE:
n=int(input(""))
s=4
i = 1 

while (i<n):
	t=(2*i1+1)
	s=s-(-1)**(i+1)/t
	i = i + 1
# Impressao de resultados
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    t=(2*i1+1)
NameError: name 'i1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:26:22) 
-- CODE:
n=int(input(""))
s=4
i = 1 

while (i<n):
	t=(2*i1+1)
	s=s-(-1)**(i+1)/t
	i = i + 1
# Impressao de resultados
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    t=(2*i1+1)
NameError: name 'i1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:26:29) 
-- CODE:
n=int(input(""))
s=4
i = 1 

while (i<n):
	t=(2*i+1)
	s=s-(-1)**(i+1)/t
	i = i + 1
# Impressao de resultados
print(s)
-- OUTPUT:
3.783559952948039
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:26:56) 
-- CODE:
n=int(input(""))
s=4
i = 1 
i1=0
while (i<n):
	t=(2*i1+1)
	s=s-(-1)**(i+1)/t
	i = i + 1
# Impressao de resultados
print(s)
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:27:44) 
-- CODE:
n=int(input(""))
s=4
i = 1 
i1=0
while (i<n):
	t=(3 * i)
	s=s-(-1)**(i+1)/t
	i = i + 1
# Impressao de resultados
print(s)
-- OUTPUT:
3.7677209442603954
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:28:00) 
-- CODE:
n=int(input(""))
s=4
i = 1 
i1=0
while (i<n):
	t=(3 * i)
	s=s-(-1)**(i+1)/t
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- EXECUTION TIME:
0.199445
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.76772094
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.76120318
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.78043161
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:28:06) 
-- CODE:
n=int(input(""))
s=4
i = 1 
i1=0
while (i<n):
	t=(3 * i)
	s=s-(-1)**(i+1)/t
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
3.76772094
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:28:09) 
-- CODE:
n=int(input(""))
s=4
i = 1 
i1=0
while (i<n):
	t=(3 * i)
	s=s-(-1)**(i+1)/t
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
3.76772094
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:29:37) 
-- CODE:
n=int(input(""))
s=0
i = 1 
i1=0
while (i<n):
	t=(3 * i)
	s=s+2**i/(3 * i)
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- EXECUTION TIME:
0.126689
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
2.1672193251376478e+38
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
70335.58513332
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
855.08754949
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:29:38) 
-- CODE:
n=int(input(""))
s=0
i = 1 
i1=0
while (i<n):
	t=(3 * i)
	s=s+2**i/(3 * i)
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
2.1672193251376478e+38
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:29:47) 
-- CODE:
n=int(input(""))
s=0
i = 1 
i1=0
while (i<n):
	t=(3 * i)
	s=s+4**i/(3 * i)
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
6.261335553030262e+78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:30:14) 
-- CODE:
n=int(input(""))
s=0
i = 1 
i1=0
while (i<n):
	t=(3 * i)
	s=s+4**i/t
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- EXECUTION TIME:
0.153091
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
6.261335553030262e+78
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
94689411489.7819
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
8753695.07668628
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:30:14) 
-- CODE:
n=int(input(""))
s=0
i = 1 
i1=0
while (i<n):
	t=(3 * i)
	s=s+4**i/t
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
6.261335553030262e+78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:30:18) 
-- CODE:
n=int(input(""))
s=0
i = 1 
i1=0
while (i<n):
	t=(3 * i)
	s=s+4**i/t
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
6.261335553030262e+78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:30:20) 
-- CODE:
n=int(input(""))
s=0
i = 1 
i1=0
while (i<n):
	t=(3 * i)
	s=s+4**i/t
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
6.261335553030262e+78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:30:23) 
-- CODE:
n=int(input(""))
s=0
i = 1 
i1=0
while (i<n):
	t=(3 * i)
	s=s+4**i/t
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
6.261335553030262e+78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:32:24) 
-- CODE:
n=int(input(""))
s=0
i = 1 
il=0
while (i<n):
	t=(il*2+ i)
	s=s+4**i/t
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
1.8784006659090787e+79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:33:07) 
-- CODE:
n=int(input(""))
s=0
i = 0
il=0
while (i<n):
	t=(il*2+ i)
	s=s+4**i/t
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    s=s+4**i/t
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:33:20) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
while (il<n):
	t=(il*2+ i)
	s=s+4**i/t
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    s=s+4**i/t
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:33:29) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
while (i<n):
	t=(il*2+ i)
	s=s+4**i/t
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
1.8784006659090787e+79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:33:33) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
while (i<n):
	t=(il*2+ i)
	s=s+4**i/t
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
1.8784006659090787e+79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:33:37) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
while (i<n):
	t=(il*2+ i)
	s=s+4**i/t
	i = i + 1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
1.8784006659090787e+79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:34:19) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=p
while (s<n):
	t=(il*2+ i)
	s=s+4**i/t
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    p=p
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:34:23) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=p
while (p<n):
	t=(il*2+ i)
	s=s+4**i/t
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    p=p
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:34:28) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
while (p<n):
	t=(il*2+ i)
	s=s+4**i/t
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
2.49834987834693e+79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:34:31) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
while (p<n):
	t=(il*2+ i)
	s=s+4**i/t
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
2.49834987834693e+79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:34:33) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
while (p<n):
	t=(il*2+ i)
	s=s+4**i/t
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
2.49834987834693e+79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:34:35) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
while (p<n):
	t=(il*2+ i)
	s=s+4**i/t
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
2.49834987834693e+79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:34:37) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
while (p<n):
	t=(il*2+ i)
	s=s+4**i/t
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
2.49834987834693e+79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:34:39) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
while (p<n):
	t=(il*2+ i)
	s=s+4**i/t
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
2.49834987834693e+79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:35:23) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
while (p<n):
	t=(il*2+ i)
	s=s+4**i*4/t
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
9.99339951338772e+79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:35:27) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
while (p<n):
	t=(il*2+ i)
	s=s+4**i*4/t
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
9.99339951338772e+79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:41:47) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
while (p<n):
	t=(il*2+ i)
	w=4**i*4/t
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
9.99339951338772e+79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:42:05) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=1
w=0
while (p<n):
	t=(il*2+ i)
	w=4**i*4/t
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
2.5169952175682568e+79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:42:35) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
while (p<n):
	t=(il*2+ i)
	w=4-(-1)**i*4/t
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
547.33768748
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:42:51) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
while (p<n):
	t=(il*2+ i)
	w=4-(-1)**(i)*4/t
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
547.33768748
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:43:14) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
while (p<n):
	t=(il*2+ i)
	print(t)
	w=4-(-1)**(i)*4/t
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
1
4
7
10
13
16
19
22
25
28
31
34
37
40
43
46
49
52
55
58
61
64
67
70
73
76
79
82
85
88
91
94
97
100
103
106
109
112
115
118
121
124
127
130
133
136
139
142
145
148
151
154
157
160
163
166
169
172
175
178
181
184
187
190
193
196
199
202
205
208
211
214
217
220
223
226
229
232
235
238
241
244
247
250
253
256
259
262
265
268
271
274
277
280
283
286
289
292
295
298
301
304
307
310
313
316
319
322
325
328
331
334
337
340
343
346
349
352
355
358
361
364
367
370
373
376
379
382
385
388
391
394
397
400
403
406
547.33768748
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:43:19) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
while (p<n):
	t=(il*2+ i)
	print(t)
	w=4-(-1)**(i)*4/t
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- OUTPUT:
1
4
7
10
13
16
19
22
25
28
31
34
37
40
43
46
49
52
55
58
61
64
67
70
73
76
79
82
85
88
91
94
97
100
103
106
109
112
115
118
121
124
127
130
133
136
139
142
145
148
151
154
157
160
163
166
169
172
175
178
181
184
187
190
193
196
199
202
205
208
211
214
217
220
223
226
229
232
235
238
241
244
247
250
253
256
259
262
265
268
271
274
277
280
283
286
289
292
295
298
301
304
307
310
313
316
319
322
325
328
331
334
337
340
343
346
349
352
355
358
361
364
367
370
373
376
379
382
385
388
391
394
397
400
403
406
547.33768748
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:43:20) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
while (p<n):
	t=(il*2+ i)
	print(t)
	w=4-(-1)**(i)*4/t
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))
-- EXECUTION TIME:
0.125045
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
1
4
7
10
13
16
19
22
25
28
31
34
37
40
43
46
49
52
55
58
61
64
67
70
73
76
79
82
85
88
91
94
97
100
103
106
109
112
115
118
121
124
127
130
133
136
139
142
145
148
151
154
157
160
163
166
169
172
175
178
181
184
187
190
193
196
199
202
205
208
211
214
217
220
223
226
229
232
235
238
241
244
247
250
253
256
259
262
265
268
271
274
277
280
283
286
289
292
295
298
301
304
307
310
313
316
319
322
325
328
331
334
337
340
343
346
349
352
355
358
361
364
367
370
373
376
379
382
385
388
391
394
397
400
403
406
547.33768748
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
1
4
7
10
13
16
19
22
25
28
31
34
37
40
43
46
49
52
55
58
61
64
91.31207701
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
1
4
7
10
13
16
19
22
25
28
31
34
37
40
43
63.38748843
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:44:19) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
while (p<n):
	t=(il*2+ i)
	print(t)
	w=4-(-1)**(i)*4/t
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
4
7
10
13
16
19
22
25
28
31
34
37
40
43
46
49
52
55
58
61
64
67
70
73
76
79
82
85
88
91
94
97
100
103
106
109
112
115
118
121
124
127
130
133
136
139
142
145
148
151
154
157
160
163
166
169
172
175
178
181
184
187
190
193
196
199
202
205
208
211
214
217
220
223
226
229
232
235
238
241
244
247
250
253
256
259
262
265
268
271
274
277
280
283
286
289
292
295
298
301
304
307
310
313
316
319
322
325
328
331
334
337
340
343
346
349
352
355
358
361
364
367
370
373
376
379
382
385
388
391
394
397
400
403
406
547.33768748
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:44:27) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
while (p<n):
	t=(il*2+ i)
	print(t)
	w=4-(-1)**(i)*4/t
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
4
7
10
13
16
19
22
25
28
31
34
37
40
43
46
49
52
55
58
61
64
67
70
73
76
79
82
85
88
91
94
97
100
103
106
109
112
115
118
121
124
127
130
133
136
139
142
145
148
151
154
157
160
163
166
169
172
175
178
181
184
187
190
193
196
199
202
205
208
211
214
217
220
223
226
229
232
235
238
241
244
247
250
253
256
259
262
265
268
271
274
277
280
283
286
289
292
295
298
301
304
307
310
313
316
319
322
325
328
331
334
337
340
343
346
349
352
355
358
361
364
367
370
373
376
379
382
385
388
391
394
397
400
403
406
547.33768748
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:45:36) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
while (p<n):
	t=(il*2+ 1)
	print(t)
	w=4-(-1)**(i)*4/t
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
33
35
37
39
41
43
45
47
49
51
53
55
57
59
61
63
65
67
69
71
73
75
77
79
81
83
85
87
89
91
93
95
97
99
101
103
105
107
109
111
113
115
117
119
121
123
125
127
129
131
133
135
137
139
141
143
145
147
149
151
153
155
157
159
161
163
165
167
169
171
173
175
177
179
181
183
185
187
189
191
193
195
197
199
201
203
205
207
209
211
213
215
217
219
221
223
225
227
229
231
233
235
237
239
241
243
245
247
249
251
253
255
257
259
261
263
265
267
269
271
547.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:45:57) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
while (p<n):
	t=(il*2+ 1)
	print(t)
	w=4-(-1)**(i)*4/t
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
33
35
37
39
41
43
45
47
49
51
53
55
57
59
61
63
65
67
69
71
73
75
77
79
81
83
85
87
89
91
93
95
97
99
101
103
105
107
109
111
113
115
117
119
121
123
125
127
129
131
133
135
137
139
141
143
145
147
149
151
153
155
157
159
161
163
165
167
169
171
173
175
177
179
181
183
185
187
189
191
193
195
197
199
201
203
205
207
209
211
213
215
217
219
221
223
225
227
229
231
233
235
237
239
241
243
245
247
249
251
253
255
257
259
261
263
265
267
269
271
547.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:46:06) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
while (p<n):
	t=(il*2+ 1)
	print(t)
	w=4-(-1)**(i)*4/t
	print(t)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
1
3
3
5
5
7
7
9
9
11
11
13
13
15
15
17
17
19
19
21
21
23
23
25
25
27
27
29
29
31
31
33
33
35
35
37
37
39
39
41
41
43
43
45
45
47
47
49
49
51
51
53
53
55
55
57
57
59
59
61
61
63
63
65
65
67
67
69
69
71
71
73
73
75
75
77
77
79
79
81
81
83
83
85
85
87
87
89
89
91
91
93
93
95
95
97
97
99
99
101
101
103
103
105
105
107
107
109
109
111
111
113
113
115
115
117
117
119
119
121
121
123
123
125
125
127
127
129
129
131
131
133
133
135
135
137
137
139
139
141
141
143
143
145
145
147
147
149
149
151
151
153
153
155
155
157
157
159
159
161
161
163
163
165
165
167
167
169
169
171
171
173
173
175
175
177
177
179
179
181
181
183
183
185
185
187
187
189
189
191
191
193
193
195
195
197
197
199
199
201
201
203
203
205
205
207
207
209
209
211
211
213
213
215
215
217
217
219
219
221
221
223
223
225
225
227
227
229
229
231
231
233
233
235
235
237
237
239
239
241
241
243
243
245
245
247
247
249
249
251
251
253
253
255
255
257
257
259
259
261
261
263
263
265
265
267
267
269
269
271
271
547.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:46:13) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
while (p<n):
	t=(il*2+ 1)
	print(t)
	w=4-(-1)**(i)*4/t
	print(t)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
1
3
3
5
5
7
7
9
9
11
11
13
13
15
15
17
17
19
19
21
21
23
23
25
25
27
27
29
29
31
31
33
33
35
35
37
37
39
39
41
41
43
43
45
45
47
47
49
49
51
51
53
53
55
55
57
57
59
59
61
61
63
63
65
65
67
67
69
69
71
71
73
73
75
75
77
77
79
79
81
81
83
83
85
85
87
87
89
89
91
91
93
93
95
95
97
97
99
99
101
101
103
103
105
105
107
107
109
109
111
111
113
113
115
115
117
117
119
119
121
121
123
123
125
125
127
127
129
129
131
131
133
133
135
135
137
137
139
139
141
141
143
143
145
145
147
147
149
149
151
151
153
153
155
155
157
157
159
159
161
161
163
163
165
165
167
167
169
169
171
171
173
173
175
175
177
177
179
179
181
181
183
183
185
185
187
187
189
189
191
191
193
193
195
195
197
197
199
199
201
201
203
203
205
205
207
207
209
209
211
211
213
213
215
215
217
217
219
219
221
221
223
223
225
225
227
227
229
229
231
231
233
233
235
235
237
237
239
239
241
241
243
243
245
245
247
247
249
249
251
251
253
253
255
255
257
257
259
259
261
261
263
263
265
265
267
267
269
269
271
271
547.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:46:25) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
while (p<n):
	t=(il*2+ 1)
	print(t)
	w=4-(-1)**(i)*4/t
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
8.0
3
2.666666666666667
5
4.8
7
3.428571428571429
9
4.444444444444445
11
3.6363636363636362
13
4.3076923076923075
15
3.7333333333333334
17
4.235294117647059
19
3.7894736842105265
21
4.190476190476191
23
3.8260869565217392
25
4.16
27
3.851851851851852
29
4.137931034482759
31
3.870967741935484
33
4.121212121212121
35
3.8857142857142857
37
4.108108108108108
39
3.8974358974358974
41
4.097560975609756
43
3.9069767441860463
45
4.088888888888889
47
3.9148936170212765
49
4.081632653061225
51
3.9215686274509802
53
4.0754716981132075
55
3.9272727272727272
57
4.0701754385964914
59
3.9322033898305087
61
4.065573770491803
63
3.9365079365079367
65
4.061538461538461
67
3.9402985074626864
69
4.057971014492754
71
3.943661971830986
73
4.054794520547945
75
3.9466666666666668
77
4.0519480519480515
79
3.949367088607595
81
4.049382716049383
83
3.9518072289156625
85
4.047058823529412
87
3.954022988505747
89
4.044943820224719
91
3.956043956043956
93
4.043010752688172
95
3.957894736842105
97
4.04123711340206
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:46:54) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
while (p<n):
	t=(2*il+ 1)
	print(t)
	w=4-(-1)**(i)*4/t
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
8.0
3
2.666666666666667
5
4.8
7
3.428571428571429
9
4.444444444444445
11
3.6363636363636362
13
4.3076923076923075
15
3.7333333333333334
17
4.235294117647059
19
3.7894736842105265
21
4.190476190476191
23
3.8260869565217392
25
4.16
27
3.851851851851852
29
4.137931034482759
31
3.870967741935484
33
4.121212121212121
35
3.8857142857142857
37
4.108108108108108
39
3.8974358974358974
41
4.097560975609756
43
3.9069767441860463
45
4.088888888888889
47
3.9148936170212765
49
4.081632653061225
51
3.9215686274509802
53
4.0754716981132075
55
3.9272727272727272
57
4.0701754385964914
59
3.9322033898305087
61
4.065573770491803
63
3.9365079365079367
65
4.061538461538461
67
3.9402985074626864
69
4.057971014492754
71
3.943661971830986
73
4.054794520547945
75
3.9466666666666668
77
4.0519480519480515
79
3.949367088607595
81
4.049382716049383
83
3.9518072289156625
85
4.047058823529412
87
3.954022988505747
89
4.044943820224719
91
3.956043956043956
93
4.043010752688172
95
3.957894736842105
97
4.04123711340206
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:47:01) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
while (p<n):
	t=(2*il+ 1)
	print(t)
	w=4-(-1)**(i)/t
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
5.0
3
3.6666666666666665
5
4.2
7
3.857142857142857
9
4.111111111111111
11
3.909090909090909
13
4.076923076923077
15
3.933333333333333
17
4.0588235294117645
19
3.9473684210526314
21
4.0476190476190474
23
3.9565217391304346
25
4.04
27
3.962962962962963
29
4.0344827586206895
31
3.967741935483871
33
4.03030303030303
35
3.9714285714285715
37
4.027027027027027
39
3.9743589743589745
41
4.024390243902439
43
3.9767441860465116
45
4.022222222222222
47
3.978723404255319
49
4.020408163265306
51
3.980392156862745
53
4.018867924528302
55
3.981818181818182
57
4.017543859649122
59
3.983050847457627
61
4.016393442622951
63
3.984126984126984
65
4.015384615384615
67
3.985074626865672
69
4.0144927536231885
71
3.9859154929577465
73
4.013698630136986
75
3.986666666666667
77
4.012987012987013
79
3.9873417721518987
81
4.012345679012346
83
3.9879518072289155
85
4.011764705882353
87
3.9885057471264367
89
4.01123595505618
91
3.989010989010989
93
4.010752688172043
95
3.9894736842105263
97
4.010309278350515
99
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:47:47) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	print(t)
	r=4/t
	w=(-1)**(i)*r
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
-4.0
3
1.3333333333333333
5
-0.8
7
0.5714285714285714
9
-0.4444444444444444
11
0.36363636363636365
13
-0.3076923076923077
15
0.26666666666666666
17
-0.23529411764705882
19
0.21052631578947367
21
-0.19047619047619047
23
0.17391304347826086
25
-0.16
27
0.14814814814814814
29
-0.13793103448275862
31
0.12903225806451613
33
-0.12121212121212122
35
0.11428571428571428
37
-0.10810810810810811
39
0.10256410256410256
41
-0.0975609756097561
43
0.09302325581395349
45
-0.08888888888888889
47
0.0851063829787234
49
-0.08163265306122448
51
0.0784313725490196
53
-0.07547169811320754
55
0.07272727272727272
57
-0.07017543859649122
59
0.06779661016949153
61
-0.06557377049180328
63
0.06349206349206349
65
-0.06153846153846154
67
0.05970149253731343
69
-0.057971014492753624
71
0.056338028169014086
73
-0.0547945205479452
75
0.05333333333333334
77
-0.05194805194805195
79
0.05063291139240506
81
-0.04938271604938271
83
0.04819277108433735
85
-0.047058823529411764
87
0.04597701149425287
89
-0.0449438202247191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:47:54) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	print(t)
	r=4/t
	w=(-1)**(i)*r
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
-4.0
3
1.3333333333333333
5
-0.8
7
0.5714285714285714
9
-0.4444444444444444
11
0.36363636363636365
13
-0.3076923076923077
15
0.26666666666666666
17
-0.23529411764705882
19
0.21052631578947367
21
-0.19047619047619047
23
0.17391304347826086
25
-0.16
27
0.14814814814814814
29
-0.13793103448275862
31
0.12903225806451613
33
-0.12121212121212122
35
0.11428571428571428
37
-0.10810810810810811
39
0.10256410256410256
41
-0.0975609756097561
43
0.09302325581395349
45
-0.08888888888888889
47
0.0851063829787234
49
-0.08163265306122448
51
0.0784313725490196
53
-0.07547169811320754
55
0.07272727272727272
57
-0.07017543859649122
59
0.06779661016949153
61
-0.06557377049180328
63
0.06349206349206349
65
-0.06153846153846154
67
0.05970149253731343
69
-0.057971014492753624
71
0.056338028169014086
73
-0.0547945205479452
75
0.05333333333333334
77
-0.05194805194805195
79
0.05063291139240506
81
-0.04938271604938271
83
0.04819277108433735
85
-0.047058823529411764
87
0.04597701149425287
89
-0.0449438202247191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:47:57) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	print(t)
	r=4/t
	w=(-1)**(i)*r
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
-4.0
3
1.3333333333333333
5
-0.8
7
0.5714285714285714
9
-0.4444444444444444
11
0.36363636363636365
13
-0.3076923076923077
15
0.26666666666666666
17
-0.23529411764705882
19
0.21052631578947367
21
-0.19047619047619047
23
0.17391304347826086
25
-0.16
27
0.14814814814814814
29
-0.13793103448275862
31
0.12903225806451613
33
-0.12121212121212122
35
0.11428571428571428
37
-0.10810810810810811
39
0.10256410256410256
41
-0.0975609756097561
43
0.09302325581395349
45
-0.08888888888888889
47
0.0851063829787234
49
-0.08163265306122448
51
0.0784313725490196
53
-0.07547169811320754
55
0.07272727272727272
57
-0.07017543859649122
59
0.06779661016949153
61
-0.06557377049180328
63
0.06349206349206349
65
-0.06153846153846154
67
0.05970149253731343
69
-0.057971014492753624
71
0.056338028169014086
73
-0.0547945205479452
75
0.05333333333333334
77
-0.05194805194805195
79
0.05063291139240506
81
-0.04938271604938271
83
0.04819277108433735
85
-0.047058823529411764
87
0.04597701149425287
89
-0.0449438202247191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:47:59) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	print(t)
	r=4/t
	w=(-1)**(i)*r
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
-4.0
3
1.3333333333333333
5
-0.8
7
0.5714285714285714
9
-0.4444444444444444
11
0.36363636363636365
13
-0.3076923076923077
15
0.26666666666666666
17
-0.23529411764705882
19
0.21052631578947367
21
-0.19047619047619047
23
0.17391304347826086
25
-0.16
27
0.14814814814814814
29
-0.13793103448275862
31
0.12903225806451613
33
-0.12121212121212122
35
0.11428571428571428
37
-0.10810810810810811
39
0.10256410256410256
41
-0.0975609756097561
43
0.09302325581395349
45
-0.08888888888888889
47
0.0851063829787234
49
-0.08163265306122448
51
0.0784313725490196
53
-0.07547169811320754
55
0.07272727272727272
57
-0.07017543859649122
59
0.06779661016949153
61
-0.06557377049180328
63
0.06349206349206349
65
-0.06153846153846154
67
0.05970149253731343
69
-0.057971014492753624
71
0.056338028169014086
73
-0.0547945205479452
75
0.05333333333333334
77
-0.05194805194805195
79
0.05063291139240506
81
-0.04938271604938271
83
0.04819277108433735
85
-0.047058823529411764
87
0.04597701149425287
89
-0.0449438202247191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:48:15) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	print(t)
	r=4/t
	w=(-1)**(i)*r
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
-4.0
3
1.3333333333333333
5
-0.8
7
0.5714285714285714
9
-0.4444444444444444
11
0.36363636363636365
13
-0.3076923076923077
15
0.26666666666666666
17
-0.23529411764705882
19
0.21052631578947367
21
-0.19047619047619047
23
0.17391304347826086
25
-0.16
27
0.14814814814814814
29
-0.13793103448275862
31
0.12903225806451613
33
-0.12121212121212122
35
0.11428571428571428
37
-0.10810810810810811
39
0.10256410256410256
41
-0.0975609756097561
43
0.09302325581395349
45
-0.08888888888888889
47
0.0851063829787234
49
-0.08163265306122448
51
0.0784313725490196
53
-0.07547169811320754
55
0.07272727272727272
57
-0.07017543859649122
59
0.06779661016949153
61
-0.06557377049180328
63
0.06349206349206349
65
-0.06153846153846154
67
0.05970149253731343
69
-0.057971014492753624
71
0.056338028169014086
73
-0.0547945205479452
75
0.05333333333333334
77
-0.05194805194805195
79
0.05063291139240506
81
-0.04938271604938271
83
0.04819277108433735
85
-0.047058823529411764
87
0.04597701149425287
89
-0.0449438202247191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:48:31) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	print(t)
	r=4/t
	w=4-(-1)**(i)*r
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
8.0
3
2.666666666666667
5
4.8
7
3.428571428571429
9
4.444444444444445
11
3.6363636363636362
13
4.3076923076923075
15
3.7333333333333334
17
4.235294117647059
19
3.7894736842105265
21
4.190476190476191
23
3.8260869565217392
25
4.16
27
3.851851851851852
29
4.137931034482759
31
3.870967741935484
33
4.121212121212121
35
3.8857142857142857
37
4.108108108108108
39
3.8974358974358974
41
4.097560975609756
43
3.9069767441860463
45
4.088888888888889
47
3.9148936170212765
49
4.081632653061225
51
3.9215686274509802
53
4.0754716981132075
55
3.9272727272727272
57
4.0701754385964914
59
3.9322033898305087
61
4.065573770491803
63
3.9365079365079367
65
4.061538461538461
67
3.9402985074626864
69
4.057971014492754
71
3.943661971830986
73
4.054794520547945
75
3.9466666666666668
77
4.0519480519480515
79
3.949367088607595
81
4.049382716049383
83
3.9518072289156625
85
4.047058823529412
87
3.954022988505747
89
4.044943820224719
91
3.956043956043956
93
4.043010752688172
95
3.957894736842105
97
4.04123711340206
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:48:34) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	print(t)
	r=4/t
	w=4-(-1)**(i)*r
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
8.0
3
2.666666666666667
5
4.8
7
3.428571428571429
9
4.444444444444445
11
3.6363636363636362
13
4.3076923076923075
15
3.7333333333333334
17
4.235294117647059
19
3.7894736842105265
21
4.190476190476191
23
3.8260869565217392
25
4.16
27
3.851851851851852
29
4.137931034482759
31
3.870967741935484
33
4.121212121212121
35
3.8857142857142857
37
4.108108108108108
39
3.8974358974358974
41
4.097560975609756
43
3.9069767441860463
45
4.088888888888889
47
3.9148936170212765
49
4.081632653061225
51
3.9215686274509802
53
4.0754716981132075
55
3.9272727272727272
57
4.0701754385964914
59
3.9322033898305087
61
4.065573770491803
63
3.9365079365079367
65
4.061538461538461
67
3.9402985074626864
69
4.057971014492754
71
3.943661971830986
73
4.054794520547945
75
3.9466666666666668
77
4.0519480519480515
79
3.949367088607595
81
4.049382716049383
83
3.9518072289156625
85
4.047058823529412
87
3.954022988505747
89
4.044943820224719
91
3.956043956043956
93
4.043010752688172
95
3.957894736842105
97
4.04123711340206
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:48:38) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	print(t)
	r=4/t
	w=4-(-1)**(i)*r
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
8.0
3
2.666666666666667
5
4.8
7
3.428571428571429
9
4.444444444444445
11
3.6363636363636362
13
4.3076923076923075
15
3.7333333333333334
17
4.235294117647059
19
3.7894736842105265
21
4.190476190476191
23
3.8260869565217392
25
4.16
27
3.851851851851852
29
4.137931034482759
31
3.870967741935484
33
4.121212121212121
35
3.8857142857142857
37
4.108108108108108
39
3.8974358974358974
41
4.097560975609756
43
3.9069767441860463
45
4.088888888888889
47
3.9148936170212765
49
4.081632653061225
51
3.9215686274509802
53
4.0754716981132075
55
3.9272727272727272
57
4.0701754385964914
59
3.9322033898305087
61
4.065573770491803
63
3.9365079365079367
65
4.061538461538461
67
3.9402985074626864
69
4.057971014492754
71
3.943661971830986
73
4.054794520547945
75
3.9466666666666668
77
4.0519480519480515
79
3.949367088607595
81
4.049382716049383
83
3.9518072289156625
85
4.047058823529412
87
3.954022988505747
89
4.044943820224719
91
3.956043956043956
93
4.043010752688172
95
3.957894736842105
97
4.04123711340206
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:48:44) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	print(t)
	r=4/t
	w=4(-1)**(i)*r
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    w=4(-1)**(i)*r
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:48:53) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	print(t)
	r=4/t
	w=(1)**(i)*r
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
4.0
3
1.3333333333333333
5
0.8
7
0.5714285714285714
9
0.4444444444444444
11
0.36363636363636365
13
0.3076923076923077
15
0.26666666666666666
17
0.23529411764705882
19
0.21052631578947367
21
0.19047619047619047
23
0.17391304347826086
25
0.16
27
0.14814814814814814
29
0.13793103448275862
31
0.12903225806451613
33
0.12121212121212122
35
0.11428571428571428
37
0.10810810810810811
39
0.10256410256410256
41
0.0975609756097561
43
0.09302325581395349
45
0.08888888888888889
47
0.0851063829787234
49
0.08163265306122448
51
0.0784313725490196
53
0.07547169811320754
55
0.07272727272727272
57
0.07017543859649122
59
0.06779661016949153
61
0.06557377049180328
63
0.06349206349206349
65
0.06153846153846154
67
0.05970149253731343
69
0.057971014492753624
71
0.056338028169014086
73
0.0547945205479452
75
0.05333333333333334
77
0.05194805194805195
79
0.05063291139240506
81
0.04938271604938271
83
0.04819277108433735
85
0.047058823529411764
87
0.04597701149425287
89
0.0449438202247191
91
0.04395604395604396
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:48:56) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	print(t)
	r=4/t
	w=(1)**(i)*r
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
4.0
3
1.3333333333333333
5
0.8
7
0.5714285714285714
9
0.4444444444444444
11
0.36363636363636365
13
0.3076923076923077
15
0.26666666666666666
17
0.23529411764705882
19
0.21052631578947367
21
0.19047619047619047
23
0.17391304347826086
25
0.16
27
0.14814814814814814
29
0.13793103448275862
31
0.12903225806451613
33
0.12121212121212122
35
0.11428571428571428
37
0.10810810810810811
39
0.10256410256410256
41
0.0975609756097561
43
0.09302325581395349
45
0.08888888888888889
47
0.0851063829787234
49
0.08163265306122448
51
0.0784313725490196
53
0.07547169811320754
55
0.07272727272727272
57
0.07017543859649122
59
0.06779661016949153
61
0.06557377049180328
63
0.06349206349206349
65
0.06153846153846154
67
0.05970149253731343
69
0.057971014492753624
71
0.056338028169014086
73
0.0547945205479452
75
0.05333333333333334
77
0.05194805194805195
79
0.05063291139240506
81
0.04938271604938271
83
0.04819277108433735
85
0.047058823529411764
87
0.04597701149425287
89
0.0449438202247191
91
0.04395604395604396
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:49:06) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	print(t)
	r=4/t
	w=(-1)**(i)*r
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
-4.0
3
1.3333333333333333
5
-0.8
7
0.5714285714285714
9
-0.4444444444444444
11
0.36363636363636365
13
-0.3076923076923077
15
0.26666666666666666
17
-0.23529411764705882
19
0.21052631578947367
21
-0.19047619047619047
23
0.17391304347826086
25
-0.16
27
0.14814814814814814
29
-0.13793103448275862
31
0.12903225806451613
33
-0.12121212121212122
35
0.11428571428571428
37
-0.10810810810810811
39
0.10256410256410256
41
-0.0975609756097561
43
0.09302325581395349
45
-0.08888888888888889
47
0.0851063829787234
49
-0.08163265306122448
51
0.0784313725490196
53
-0.07547169811320754
55
0.07272727272727272
57
-0.07017543859649122
59
0.06779661016949153
61
-0.06557377049180328
63
0.06349206349206349
65
-0.06153846153846154
67
0.05970149253731343
69
-0.057971014492753624
71
0.056338028169014086
73
-0.0547945205479452
75
0.05333333333333334
77
-0.05194805194805195
79
0.05063291139240506
81
-0.04938271604938271
83
0.04819277108433735
85
-0.047058823529411764
87
0.04597701149425287
89
-0.0449438202247191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:49:13) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	print(t)
	r=4/t
	w=(-1)**(i)*r
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
1
-4.0
3
1.3333333333333333
5
-0.8
7
0.5714285714285714
9
-0.4444444444444444
11
0.36363636363636365
13
-0.3076923076923077
15
0.26666666666666666
17
-0.23529411764705882
19
0.21052631578947367
21
-0.19047619047619047
23
0.17391304347826086
25
-0.16
27
0.14814814814814814
29
-0.13793103448275862
31
0.12903225806451613
33
-0.12121212121212122
35
0.11428571428571428
37
-0.10810810810810811
39
0.10256410256410256
41
-0.0975609756097561
43
0.09302325581395349
45
-0.08888888888888889
47
0.0851063829787234
49
-0.08163265306122448
51
0.0784313725490196
53
-0.07547169811320754
55
0.07272727272727272
57
-0.07017543859649122
59
0.06779661016949153
61
-0.06557377049180328
63
0.06349206349206349
65
-0.06153846153846154
67
0.05970149253731343
69
-0.057971014492753624
71
0.056338028169014086
73
-0.0547945205479452
75
0.05333333333333334
77
-0.05194805194805195
79
0.05063291139240506
81
-0.04938271604938271
83
0.04819277108433735
85
-0.047058823529411764
87
0.04597701149425287
89
-0.0449438202247191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:49:20) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	r=4/t
	w=(-1)**(i)*r
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
-4.0
1.3333333333333333
-0.8
0.5714285714285714
-0.4444444444444444
0.36363636363636365
-0.3076923076923077
0.26666666666666666
-0.23529411764705882
0.21052631578947367
-0.19047619047619047
0.17391304347826086
-0.16
0.14814814814814814
-0.13793103448275862
0.12903225806451613
-0.12121212121212122
0.11428571428571428
-0.10810810810810811
0.10256410256410256
-0.0975609756097561
0.09302325581395349
-0.08888888888888889
0.0851063829787234
-0.08163265306122448
0.0784313725490196
-0.07547169811320754
0.07272727272727272
-0.07017543859649122
0.06779661016949153
-0.06557377049180328
0.06349206349206349
-0.06153846153846154
0.05970149253731343
-0.057971014492753624
0.056338028169014086
-0.0547945205479452
0.05333333333333334
-0.05194805194805195
0.05063291139240506
-0.04938271604938271
0.04819277108433735
-0.047058823529411764
0.04597701149425287
-0.0449438202247191
0.04395604395604396
-0.043010752688172046
0.042105263157894736
-0.041237113402061855
0.04040404040404041
-0.039603960396039604
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:50:18) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	r=4/t
	w=(-1)**(i)*r
	print(w)
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- EXECUTION TIME:
0.168648
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
-4.0
1.3333333333333333
-0.8
0.5714285714285714
-0.4444444444444444
0.36363636363636365
-0.3076923076923077
0.26666666666666666
-0.23529411764705882
0.21052631578947367
-0.19047619047619047
0.17391304347826086
-0.16
0.14814814814814814
-0.13793103448275862
0.12903225806451613
-0.12121212121212122
0.11428571428571428
-0.10810810810810811
0.10256410256410256
-0.0975609756097561
0.09302325581395349
-0.08888888888888889
0.0851063829787234
-0.08163265306122448
0.0784313725490196
-0.07547169811320754
0.07272727272727272
-0.07017543859649122
0.06779661016949153
-0.06557377049180328
0.06349206349206349
-0.06153846153846154
0.05970149253731343
-0.057971014492753624
0.056338028169014086
-0.0547945205479452
0.05333333333333334
-0.05194805194805195
0.05063291139240506
-0.04938271604938271
0.04819277108433735
-0.047058823529411764
0.04597701149425287
-0.0449438202247191
0.04395604395604396
-0.043010752688172046
0.042105263157894736
-0.041237113402061855
0.04040404040404041
-0.039603960396039604
0.0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
-4.0
1.3333333333333333
-0.8
0.5714285714285714
-0.4444444444444444
0.36363636363636365
-0.3076923076923077
0.26666666666666666
-0.23529411764705882
0.21052631578947367
-0.19047619047619047
0.17391304347826086
-0.16
0.14814814814814814
-0.13793103448275862
0.12903225806451613
-0.12121212121212122
0.11428571428571428
-0.10810810810810811
0.10256410256410256
-0.0975609756097561
0.09302325581395349
-3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
-4.0
1.3333333333333333
-0.8
0.5714285714285714
-0.4444444444444444
0.36363636363636365
-0.3076923076923077
0.26666666666666666
-0.23529411764705882
0.21052631578947367
-0.19047619047619047
0.17391304347826086
-0.16
0.14814814814814814
-0.13793103448275862
-3.20818565
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:50:27) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	r=4/t
	w=(-1)**(i)*r
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- EXECUTION TIME:
0.178539
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
-3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
-3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
-3.20818565
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:50:28) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	r=4/t
	w=(-1)**(i)*r
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
-3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:50:30) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	r=4/t
	w=(-1)**(i)*r
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
-3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:50:33) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	r=4/t
	w=(-1)**(i)*r
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
-3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:50:35) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	r=4/t
	w=(-1)**(i)*r
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
-3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:50:56) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	r=4/t
	w=(-1)**(i+1)*r
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:50:59) 
-- CODE:
n=int(input(""))
s=0
i = 1
il=0
p=0
w=0
r=0
while (p<n):
	t=(2*il+ 1)
	r=4/t
	w=(-1)**(i+1)*r
	s=s+w
	i = i + 1
	p=p+1
	il=il+1
# Impressao de resultados
print(round(s,8))

-- EXECUTION TIME:
0.127287
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
